--- a/www/templates/dishdetail.html
+++ b/www/templates/dishdetail.html
@@ -1,6 +1,10 @@
 <ion-view view-title="Dish Details">
-  <ion-view view-title="Dish Details">
-    <ion-content>
+  <ion-nav-buttons side="secondary">
+    <div class="buttons">
+      <button class="button button-icon icon ion-more" ng-click="dishDetailPopover.show($event)"></button>
+    </div>
+  </ion-nav-buttons>
+  <ion-content>
       <div class="card">
         <div class="item item-body item-text-wrap">
           <img class="full-image" ng-src="{{baseURL+dish.image}}" alt="Uthappizza">
@@ -29,4 +33,4 @@
       </div>
     </ion-content>
   </ion-view>
-</ion-view>
+
