--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -14,11 +14,16 @@
        <label class="item item-input">
        <img class="padding" ng-src="{{registration.imgSrc}}">
        </label>
-       <label class="item item-input">
+       <label class="item item-input-button">
        <button class="button button-block button-positive" type="button" ng-click="takePicture()">
             Take Picture
         </button>
         </label>
+        <label class="item item-input-button">
+        <button class="button button-block button-balanced" type="button" ng-click="openGallery()">
+          Gallery
+        </button>
+      </label>
         <label class="item item-input">
           <span class="input-label">First Name</span>
           <input type="text" ng-model="registration.firstname">
